build/log/idf_py_stdout_output_47662
[1/16] Performing build step for 'bootloader'
[1/1] cd /home/martin/esp/projekti/iot-air-quality-monitor/build/bootloader/esp-idf/esptool_py && /home/martin/.espressif/python_env/idf5.1_py3.10_env/bin/python /home/martin/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/martin/esp/projekti/iot-air-quality-monitor/build/bootloader/bootloader.bin
Bootloader binary size 0x6720 bytes. 0x8e0 bytes (8%) free.
[2/14] Building C object esp-idf/lvgl_esp32_drivers/CMakeFiles/__idf_lvgl_esp32_drivers.dir/lvgl_tft/ili9341.c.obj
FAILED: esp-idf/lvgl_esp32_drivers/CMakeFiles/__idf_lvgl_esp32_drivers.dir/lvgl_tft/ili9341.c.obj 
/home/martin/.espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1-dev-2889-gdb9586c53f\" -DLV_ATTRIBUTE_FAST_MEM=IRAM_ATTR -DLV_CONF_INCLUDE_SIMPLE -DLV_LVGL_H_INCLUDE_SIMPLE -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DUNITY_INCLUDE_CONFIG_H -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/martin/esp/projekti/iot-air-quality-monitor/build/config -I/home/martin/esp/projekti/iot-air-quality-monitor/components/lvgl_esp32_drivers -I/home/martin/esp/projekti/iot-air-quality-monitor/components/lvgl_esp32_drivers/lvgl_tft -I/home/martin/esp/projekti/iot-air-quality-monitor/components/lvgl_esp32_drivers/lvgl_touch -I/home/martin/esp/esp-idf/components/newlib/platform_include -I/home/martin/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/martin/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/martin/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/martin/esp/esp-idf/components/freertos/esp_additions/include -I/home/martin/esp/esp-idf/components/esp_hw_support/include -I/home/martin/esp/esp-idf/components/esp_hw_support/include/soc -I/home/martin/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/martin/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/martin/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/martin/esp/esp-idf/components/heap/include -I/home/martin/esp/esp-idf/components/log/include -I/home/martin/esp/esp-idf/components/soc/include -I/home/martin/esp/esp-idf/components/soc/esp32/. -I/home/martin/esp/esp-idf/components/soc/esp32/include -I/home/martin/esp/esp-idf/components/hal/esp32/include -I/home/martin/esp/esp-idf/components/hal/include -I/home/martin/esp/esp-idf/components/hal/platform_port/include -I/home/martin/esp/esp-idf/components/esp_rom/include -I/home/martin/esp/esp-idf/components/esp_rom/include/esp32 -I/home/martin/esp/esp-idf/components/esp_rom/esp32 -I/home/martin/esp/esp-idf/components/esp_common/include -I/home/martin/esp/esp-idf/components/esp_system/include -I/home/martin/esp/esp-idf/components/esp_system/port/soc -I/home/martin/esp/esp-idf/components/esp_system/port/include/private -I/home/martin/esp/esp-idf/components/xtensa/include -I/home/martin/esp/esp-idf/components/xtensa/esp32/include -I/home/martin/esp/esp-idf/components/lwip/include -I/home/martin/esp/esp-idf/components/lwip/include/apps -I/home/martin/esp/esp-idf/components/lwip/include/apps/sntp -I/home/martin/esp/esp-idf/components/lwip/lwip/src/include -I/home/martin/esp/esp-idf/components/lwip/port/esp32/include -I/home/martin/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/martin/esp/projekti/iot-air-quality-monitor/components/lvgl -I/home/martin/esp/projekti/iot-air-quality-monitor/components/lvgl/src -I/home/martin/esp/projekti/iot-air-quality-monitor/main -I/home/martin/esp/esp-idf/components/esp_ringbuf/include -I/home/martin/esp/esp-idf/components/efuse/include -I/home/martin/esp/esp-idf/components/efuse/esp32/include -I/home/martin/esp/esp-idf/components/driver/include -I/home/martin/esp/esp-idf/components/driver/deprecated -I/home/martin/esp/esp-idf/components/driver/esp32/include -I/home/martin/esp/esp-idf/components/esp_pm/include -I/home/martin/esp/esp-idf/components/mbedtls/port/include -I/home/martin/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/martin/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/martin/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/martin/esp/esp-idf/components/esp_app_format/include -I/home/martin/esp/esp-idf/components/bootloader_support/include -I/home/martin/esp/esp-idf/components/bootloader_support/bootloader_flash/include -I/home/martin/esp/esp-idf/components/esp_partition/include -I/home/martin/esp/esp-idf/components/app_update/include -I/home/martin/esp/esp-idf/components/spi_flash/include -I/home/martin/esp/esp-idf/components/pthread/include -I/home/martin/esp/esp-idf/components/esp_timer/include -I/home/martin/esp/esp-idf/components/app_trace/include -I/home/martin/esp/esp-idf/components/esp_event/include -I/home/martin/esp/esp-idf/components/nvs_flash/include -I/home/martin/esp/esp-idf/components/esp_phy/include -I/home/martin/esp/esp-idf/components/esp_phy/esp32/include -I/home/martin/esp/esp-idf/components/vfs/include -I/home/martin/esp/esp-idf/components/esp_netif/include -I/home/martin/esp/esp-idf/components/wpa_supplicant/include -I/home/martin/esp/esp-idf/components/wpa_supplicant/port/include -I/home/martin/esp/esp-idf/components/wpa_supplicant/esp_supplicant/include -I/home/martin/esp/esp-idf/components/esp_wifi/include -I/home/martin/esp/esp-idf/components/unity/include -I/home/martin/esp/esp-idf/components/unity/unity/src -I/home/martin/esp/esp-idf/components/cmock/CMock/src -I/home/martin/esp/esp-idf/components/console -I/home/martin/esp/esp-idf/components/http_parser -I/home/martin/esp/esp-idf/components/esp-tls -I/home/martin/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/martin/esp/esp-idf/components/esp_adc/include -I/home/martin/esp/esp-idf/components/esp_adc/interface -I/home/martin/esp/esp-idf/components/esp_adc/esp32/include -I/home/martin/esp/esp-idf/components/esp_adc/deprecated/include -I/home/martin/esp/esp-idf/components/esp_eth/include -I/home/martin/esp/esp-idf/components/esp_gdbstub/include -I/home/martin/esp/esp-idf/components/esp_gdbstub/xtensa -I/home/martin/esp/esp-idf/components/esp_gdbstub/esp32 -I/home/martin/esp/esp-idf/components/esp_hid/include -I/home/martin/esp/esp-idf/components/tcp_transport/include -I/home/martin/esp/esp-idf/components/esp_http_client/include -I/home/martin/esp/esp-idf/components/esp_http_server/include -I/home/martin/esp/esp-idf/components/esp_https_ota/include -I/home/martin/esp/esp-idf/components/esp_lcd/include -I/home/martin/esp/esp-idf/components/esp_lcd/interface -I/home/martin/esp/esp-idf/components/protobuf-c/protobuf-c -I/home/martin/esp/esp-idf/components/protocomm/include/common -I/home/martin/esp/esp-idf/components/protocomm/include/security -I/home/martin/esp/esp-idf/components/protocomm/include/transports -I/home/martin/esp/esp-idf/components/esp_local_ctrl/include -I/home/martin/esp/esp-idf/components/esp_psram/include -I/home/martin/esp/esp-idf/components/espcoredump/include -I/home/martin/esp/esp-idf/components/espcoredump/include/port/xtensa -I/home/martin/esp/esp-idf/components/wear_levelling/include -I/home/martin/esp/esp-idf/components/sdmmc/include -I/home/martin/esp/esp-idf/components/fatfs/diskio -I/home/martin/esp/esp-idf/components/fatfs/vfs -I/home/martin/esp/esp-idf/components/fatfs/src -I/home/martin/esp/esp-idf/components/idf_test/include -I/home/martin/esp/esp-idf/components/idf_test/include/esp32 -I/home/martin/esp/esp-idf/components/ieee802154/include -I/home/martin/esp/esp-idf/components/json/cJSON -I/home/martin/esp/esp-idf/components/mqtt/esp-mqtt/include -I/home/martin/esp/esp-idf/components/perfmon/include -I/home/martin/esp/esp-idf/components/spiffs/include -I/home/martin/esp/esp-idf/components/ulp/ulp_common/include -I/home/martin/esp/esp-idf/components/ulp/ulp_common/include/esp32 -I/home/martin/esp/esp-idf/components/wifi_provisioning/include -I/home/martin/esp/esp-idf/examples/common_components/protocol_examples_common/include -I/home/martin/esp/projekti/iot-air-quality-monitor/components/lv_examples_old -mlongcalls -Wno-frame-address  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/martin/esp/projekti/iot-air-quality-monitor=. -fmacro-prefix-map=/home/martin/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/lvgl_esp32_drivers/CMakeFiles/__idf_lvgl_esp32_drivers.dir/lvgl_tft/ili9341.c.obj -MF esp-idf/lvgl_esp32_drivers/CMakeFiles/__idf_lvgl_esp32_drivers.dir/lvgl_tft/ili9341.c.obj.d -o esp-idf/lvgl_esp32_drivers/CMakeFiles/__idf_lvgl_esp32_drivers.dir/lvgl_tft/ili9341.c.obj -c /home/martin/esp/projekti/iot-air-quality-monitor/components/lvgl_esp32_drivers/lvgl_tft/ili9341.c
/home/martin/esp/projekti/iot-air-quality-monitor/components/lvgl_esp32_drivers/lvgl_tft/ili9341.c: In function 'ili9341_init':
/home/martin/esp/projekti/iot-air-quality-monitor/components/lvgl_esp32_drivers/lvgl_tft/ili9341.c:94:9: error: implicit declaration of function 'gpio_pad_select_gpio'; did you mean 'esp_rom_gpio_pad_select_gpio'? [-Werror=implicit-function-declaration]
   94 |         gpio_pad_select_gpio(ILI9341_DC);
      |         ^~~~~~~~~~~~~~~~~~~~
      |         esp_rom_gpio_pad_select_gpio
cc1: some warnings being treated as errors
[3/14] Building C object esp-idf/lvgl_esp32_drivers/CMakeFiles/__idf_lvgl_esp32_drivers.dir/lvgl_touch/tp_spi.c.obj
ninja: build stopped: subcommand failed.
